--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+  <meta name="google-site-verification" content="Mt4rtzSwynJBIljJ8ddQM-cJX_8T-R9vSU2n7WX-n0Y" />
+
 <body>
 
 <header>
